# dynamite

./: README.md  pyproject.toml
dynamight/: typing.py
dynamight/core/: fourier_transform.py  freq_utils.py  irvine_srs.py  load_utils.py  peterson.py  plot_utils.py  psd.py  read_data.py  srs.py  state_space.py  stats.py  time.py  trajectory.py  vrs.py
dynamight/core/test/: test_core.py
dynamight/gui/: about_window.py  equation_widget.py  gui.py  psd_widget.py  qactions.py  sidebar.py  srs_widget.py  trim_widget.py
dynamight/utils/: lttb.py  test_lttb.py
dynomite/core/: fourier_transform.py  fourier_trasform.py  freq_utils.py  load_utils.py  psd.py  test_core.py  time.py  vrs.py
examples/vibration_data/: PSD_random_control.csv  UPS_freight_impact.csv  dc_100_hz.csv  ex_random_vibration.py  readme.md
